feat(server): asset auto-discovery and manifest reload on request